<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayersActivity">
    <Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        style="@style/BarColor"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_margin="5dp"
            android:layout_height="50dp"
            android:src="@drawable/menu"
            />
    </Toolbar>


    <ImageView
        android:id="@+id/satellite"
        android:onClick="layerClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/satellite"
        android:layout_below="@id/topToolbar"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        />

    <ImageView
        android:id="@+id/streets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/streets"
        android:layout_below="@id/topToolbar"
        android:layout_margin="10dp"
        android:onClick="layerClick"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satellite"
        android:layout_below="@id/satellite"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_alignRight="@id/satellite"
        android:layout_alignLeft="@id/satellite"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streets"
        android:layout_below="@id/streets"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_alignRight="@id/streets"
        android:layout_alignLeft="@id/streets"
        />
    <ImageView
        android:id="@+id/outdoors"
        android:layout_width="wrap_content"
        android:onClick="layerClick"
        android:layout_height="wrap_content"
        android:src="@drawable/outdoors"
        android:layout_below="@id/satellite"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"/>
    <ImageView
        android:id="@+id/darkLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dark"
        android:onClick="layerClick"
        android:layout_below="@id/streets"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoors"
        android:layout_below="@id/outdoors"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_alignRight="@id/outdoors"
        android:layout_alignLeft="@id/outdoors"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkLayer"
        android:onClick="layerClick"
        android:layout_below="@id/darkLayer"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_alignRight="@id/darkLayer"
        android:layout_alignLeft="@id/darkLayer"
        />
    <ImageView
        android:id="@+id/lightLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/light"
        android:onClick="layerClick"
        android:layout_below="@id/outdoors"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lightLayer"
        android:layout_below="@id/lightLayer"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_alignRight="@id/lightLayer"
        android:layout_alignLeft="@id/lightLayer"
        />






    <Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        style="@style/BarColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/map"
                android:onClick="BackToMain"
                android:layout_margin="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/map"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                />
            <ImageView
                android:id="@+id/profile"
                android:onClick="goProfile"
                android:layout_margin="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/avatar"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                />
            <ImageView
                android:id="@+id/search"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search"
                />
        </RelativeLayout>

    </Toolbar>
</RelativeLayout>